# raft-nng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
messaging/: process_message.cpp  simple_message.cpp  temp_messaging.cpp
server/: server.cpp  server_test
states/: candidate.cpp  follower.cpp  leader.cpp  state_handler.cpp
